<resources>
    <string name="app_name">Ipoet</string>
    <string name="CATEGORY_KEY">CATEGORY</string>
    <string name="TITLE_KEY">TITLE</string>
    <string name="ACTION">action</string>
    <string name="AUTHORS_KEY">AUTHORS</string>
    <string name="ALERT_MSG">Internet not Available loading Favourites</string>
    <string name="AUTHOR_CAT">author</string>
    <string name="TITLE_CAT">title</string>
    <string name="FAV_CAT">fav</string>
    <string name="MOBILE_AD_APP_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="SIGNIN_FAIL_MSG">Sign in failed</string>
    <string name="MOBILE_AD_APP_IDS">ca-app-pub-3940256099942544~3347511713</string>
    <string name="FEEDBACK_SUCCESS_MSG">Feedback Submitted Successfully</string>
    <string name="ALERT_TITLE">Information</string>
    <string name="FETCH_ERROR_MSG">NO DATA FETCHED FROM API</string>
    <string name="TAG">INFO</string>
    <string name="POS_KEY">POSITION</string>
    <string name="REMOVE_FAV_TEXT">Remove Poem from Favourites</string>
    <string name="ADD_TO_FAV">Add Poem to Favourites</string>
    <string name="REMOVE_TOAST">Removed from favourites successfully</string>
    <string name="ADD_TOAST">Added to Favourites successfully</string>
    <string name="feedback">Feedback</string>
    <string name="name_label">Name</string>
    <string name="EDIT_TEXT_HINT">Enter Your name here</string>
    <string name="message_label">Message</string>
    <string name="msg_hint">Enter your Message here</string>
    <string name="submit_button_text">Submit</string>
    <string name="AD_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="poem_title">Poem Title</string>
    <string name="author">Author :</string>
    <string name="poem">Poem:</string>
    <string name="poem_sample">Poem</string>
    <string name="author_name">Author Name</string>
    <string name="poems_widget">Poems</string>
    <string name="poems_content_desc">poems</string>
    <string name="poems_content">poems</string>
    <string name="authors_menu">Authors</string>
    <string name="titles_menu">Titles</string>
    <string name="favourites_menu">Favourites</string>
    <string name="feedback_menu">feedback</string>
    <string name="sign_out_menu">Sign out</string>
    <string name="FEED_ERROR_MSG">Please Enter all fields</string>
</resources>
