<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/feedback_title"
        android:textColor="#FA1111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/name_label"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EDIT_TEXT_HINT"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/widget_margin"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/message_label"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/message_label"
        android:textSize="@dimen/item_text_size"
        android:textStyle="bold"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/msg_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_hint"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/widget_margin"
        android:autofillHints="false"/>

    <Button
        android:id="@+id/feed_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:layout_margin="@dimen/widget_margin"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adsView"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

</LinearLayout>